mod: PDFダウンロード処理を修正
