# internal/infrastructures/container.go
@@ -3,7 +3,6 @@ package infrastructure
 import (
 	"gcim/example/internal/controllers"
 	"gcim/example/internal/domain/repositories"
-	"gcim/example/pkg/getdownloadurlexample"
 	uploadexample "gcim/example/pkg/uploadExample"
 
 	// "gcim/example/internal/infrastructures/repositories"
@@ -18,22 +17,25 @@ func BuildContainer() *dig.Container {
 
 	container.Provide(NewServer)
 	container.Provide(NewDB)
+	container.Provide(NewStorage)
 
 	// controllers
 	container.Provide(controllers.NewTaskController)
+	container.Provide(controllers.NewDownloadUrlController)
 
 	// presenters
 	container.Provide(presenters.NewTaskPresenter)
+	container.Provide(presenters.NewDownloadUrlPresenter)
 	container.Provide(presenters.NewErrorPresenter)
 
 	// usecases
 	container.Provide(usecases.NewCreateTaskUsecase)
+	container.Provide(usecases.NewGetDownloadUrlUsecase)
 
 	// repositories
 	container.Provide(repositories.NewTaskRepository)
 
 	// sample
-	container.Provide(getdownloadurlexample.NewGetDownloadURLExample)
 	container.Provide(uploadexample.NewUploadExample)
 
 	return container
